public/page.css
/* Required by navbar-fixed-top */
body {
  padding-top: 70px;
  padding-bottom: 70px;
}

.top0 { margin-top:0px; }
.top5 { margin-top:5px; }
.top7 { margin-top:7px; }
.top10 { margin-top:10px; }
.top15 { margin-top:15px; }
.top20 { margin-top:20px; }

.bottom0 { margin-bottom:0px; }
.bottom5 { margin-bottom:5px; }
.bottom7 { margin-bottom:7px; }
.bottom10 { margin-bottom:10px; }
.bottom15 { margin-bottom:15px; }
.bottom20 { margin-bottom:20px; }

.right3 { margin-right:3px; }
.right5 { margin-right:5px; }
.right7 { margin-right:7px; }
.right10 { margin-right:10px; }
.right15 { margin-right:15px; }
.right20 { margin-right:20px; }

.left3 { margin-left:3px; }
.left5 { margin-left:5px; }
.left7 { margin-left:7px; }
.left10 { margin-left:10px; }
.left15 { margin-left:15px; }
.left20 { margin-left:20px; }

.notification-panel-heading {
  padding-top: 5px;
  padding-bottom: 5px;
}

.notification-panel-item {
  padding-top: 5px;
  padding-bottom: 5px;
}

.invoice-list-filter-panel-heading {
  padding-top: 3px;
  padding-right: 5px;
  padding-bottom: 3px;
}

.invoice-customer-addr-panel-heading {
  padding-top: 3px;
  padding-right: 5px;
  padding-bottom: 3px;
}

.invoice-item-group-panel-heading {
  padding-top: 3px;
  padding-bottom: 3px;
  padding-right: 3px;
}

.invoice-summary-labels {
  padding-top: 0px;
  padding-bottom: 0px;
}

.valign-middle {
  vertical-align: middle;
}

.highlighterror {
    background: rgb(202, 60, 60);
    color: white;
}

.label-fix {
  display: inline-block;
  margin: 2px;
}

.label-fix-no-left-margin {
  display: inline-block;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-right: 2px;
  margin-left: 0px;
}
.inline-icon-left-fix {
  display: inline-block;
  margin-right: 0.2em;
}

.inline-icon-right-fix {
  display: inline-block;
  margin-left: 0.2em;
}

.button-signin-google {
  width: 191px;
  height:46px;
  display:block;
  background:transparent url('img/btn_google_signin_dark_normal_web.png') center top no-repeat;
}

.button-signin-google:hover {
  background-image: url('img/btn_google_signin_dark_focus_web.png');
}

.button-signin-google:active {
   background-image: url('img/btn_google_signin_dark_pressed_web.png');
}

.glyphicon-spin {
  -webkit-animation: spin 1000ms infinite linear;
  animation: spin 1000ms infinite linear;
}
@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}
@keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.setlng-bar {
  position: fixed;
  top: 0px;
  right: 0px;
}

.notification-area-center-inline {
  text-align: center;
}

.notification-area-center {
  position: fixed;
  left: 50%;
  margin-left: -150px;
  text-align: center;
  z-index: 9999;
}

.notification-area-right {
  position: fixed;
  top: 70px;
  right: 7px;
  text-align: left;
  z-index: 1;
}

.icon-lng-sv {
  background:transparent url('img/locale/se.png') center top;
  background-repeat: no-repeat;
  display: inline-block;  
  width: 16px;
  height: 11px;
  margin-right: 5px;
}

.icon-lng-en {
  background:transparent url('img/locale/gb.png') center top;
  background-repeat: no-repeat;
  display: inline-block;  
  width: 16px;
  height: 11px;
  margin-right: 5px;
}

.strike {
    display: block;
    text-align: center;
    overflow: hidden;
    white-space: nowrap; 
}

.strike > span {
    position: relative;
    display: inline-block;
}

.strike > span:before,
.strike > span:after {
    content: "";
    position: absolute;
    top: 50%;
    width: 9999px;
    height: 1px;
    background: #eee;
    /* Success color
    background: #5bc0de;
    */
}

.strike > span:before {
    right: 100%;
    margin-right: 15px;
}

.strike > span:after {
    left: 100%;
    margin-left: 15px;
}

.jumbotron { 
  background-color: #ffffff;
  border-color: #eee;
  border-width: 1px;
  border-style:solid;
  /* Yellow
  background-color: #fff9c4;
  */
  /* Orange
    background-color: #f4511e;
    color: #ffffff;
  */
}

.icon-invoice {
    position: relative;
}

.icon-invoice:before {
    content: "\f15b"; /* fa-file */
    position: relative;
    font-size: inherit;
}

.icon-invoice:after {
    content: "F";
    position: relative;
    font-size: 60%;
    font-weight: bold;
    top: 0.1em;
    left: -1.1em;
    color: white;
}

.icon-offer {
    position: relative;
}

.icon-offer:before {
    content: "\f15b"; /* fa-file */
    position: relative;
    font-size: inherit;
}

.icon-offer:after {
    content: "O";
    position: relative;
    font-size: 60%;
    font-weight: bold;
    top: 0.1em;
    left: -1.1em;
    color: white;
}

/*jQuery UI autocomplete for bootstrap*/
.ui-autocomplete {
    position: absolute;
    z-index: 1000;
    cursor: default;
    padding: 0;
    margin-top: 2px;
    list-style: none;
    background-color: #ffffff;
    border: 1px solid #ccc;

    max-height: 250px;
    overflow-y: auto;
    /* prevent horizontal scrollbar */
    overflow-x: hidden;

    -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
            border-radius: 5px;
    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
       -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
}
.ui-autocomplete > li {
  padding: 3px 20px;
}
.ui-autocomplete > li.ui-state-focus {
  background-color: #DDD;
}
.ui-helper-hidden-accessible {
  display: none;
}

